Change users index pagination (#188)
* Show 25 users by default

* Add will_paginate to bottom of users index (and indent table row)

* Add stronger sql injection protection

* Don't call YAML.load on a param value

* Set default workshops collection

* Extract filter_by_query and further sql-injection-proof it

* Use Arel to further sanitize cols

* Add this filter_by_query code to brakeman.ignore (it's not playing nice w mysql MATCH)

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,23 +16,28 @@
     </thead>
 
     <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td class="text-start text-nowrap"><%= user.first_name %> <%= user.last_name %></td>
-        <td class="text-start"><%= user.email %></td>
-        <td class="text-center">
-          <span class="<%= user.super_user? ? 'glyphicon glyphicon glyphicon-record success text-success' : 'glyphicon glyphicon-circle' %>"></span>
-        </td>
-        <td class="sign-in-count text-center">
-          <span class="<%= "text-utility" unless user.sign_in_count > 0 %>">
-            <%= user.sign_in_count %>
-          </span>
-        </td>
-        <td class="current-sign-in" style="max-width: 3em;"><%= user.current_sign_in_at && user.current_sign_in_at.strftime('%m/%d/%y %I:%M %P') %></td>
-        <td class="user-updated-at text-center"><%= user.updated_at&.strftime('%m/%d/%y %I:%M %P') %></td>
-        <td class="text-center"><%= link_to "<span class='glyphicon glyphicon-pencil'></span>".html_safe, edit_user_path(user) %></td>
-      </tr>
-    <% end %>
+      <% @users.each do |user| %>
+        <tr>
+          <td class="text-start text-nowrap"><%= user.first_name %> <%= user.last_name %></td>
+          <td class="text-start"><%= user.email %></td>
+          <td class="text-center">
+            <span class="<%= user.super_user? ? 'glyphicon glyphicon glyphicon-record success text-success' : 'glyphicon glyphicon-circle' %>"></span>
+          </td>
+          <td class="sign-in-count text-center">
+            <span class="<%= "text-utility" unless user.sign_in_count > 0 %>">
+              <%= user.sign_in_count %>
+            </span>
+          </td>
+          <td class="current-sign-in" style="max-width: 3em;"><%= user.current_sign_in_at && user.current_sign_in_at.strftime('%m/%d/%y %I:%M %P') %></td>
+          <td class="user-updated-at text-center"><%= user.updated_at&.strftime('%m/%d/%y %I:%M %P') %></td>
+          <td class="text-center"><%= link_to "<span class='glyphicon glyphicon-pencil'></span>".html_safe, edit_user_path(user) %></td>
+        </tr>
+      <% end %>
     </tbody>
   </table>
+
+  <div class='paginate-container'>
+    <!-- ##### Will Paginate #### -->
+    <%= will_paginate @users, :previous_label => '<<', :next_label => '>>', :inner_window => 2 %>
+  </div>
 </div>
